[gd_scene load_steps=9 format=3 uid="uid://32wuiglya8vk"]

[ext_resource type="Script" path="res://Scripts/PlayerUI.gd" id="1_g207d"]
[ext_resource type="Texture2D" uid="uid://bw1f4d1qi0o80" path="res://Sprites/Lifes/BarBackground.png" id="2_t50ng"]
[ext_resource type="Texture2D" uid="uid://b4hmppgxwo82i" path="res://Sprites/Lifes/BarGlass.png" id="3_n5d8v"]
[ext_resource type="Texture2D" uid="uid://xhlk7sra242m" path="res://Sprites/Lifes/RedBar.png" id="4_r3r5k"]
[ext_resource type="Texture2D" uid="uid://ce6f8l3xc684v" path="res://Sprites/Lifes/heart.png" id="5_ai347"]
[ext_resource type="Texture2D" uid="uid://brwqfxh3jija6" path="res://Sprites/Info/sand_clock.svg" id="6_qy2rg"]
[ext_resource type="Texture2D" uid="uid://u5gsb6q0t8m3" path="res://Sprites/Info/dead_icon.svg" id="7_d15qb"]
[ext_resource type="Texture2D" uid="uid://cxpqkrpwuvijf" path="res://Sprites/Info/Ammo.png" id="8_mm2in"]

[node name="PlayerUI" type="CanvasLayer"]
offset = Vector2(-3.735, 0)
transform = Transform2D(1, 0, 0, 1, -3.735, 0)
script = ExtResource("1_g207d")

[node name="health_bar" type="TextureProgressBar" parent="."]
offset_left = 39.0
offset_top = -88.0
offset_right = 1063.0
offset_bottom = 936.0
scale = Vector2(0.41615, 0.39993)
value = 100.0
texture_under = ExtResource("2_t50ng")
texture_over = ExtResource("3_n5d8v")
texture_progress = ExtResource("4_r3r5k")

[node name="hearts" type="TextureRect" parent="."]
offset_left = 26.735
offset_top = 38.0
offset_right = 346.735
offset_bottom = 328.0
scale = Vector2(0.333414, 0.333414)
texture = ExtResource("5_ai347")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -182.265
offset_top = 26.0
offset_right = -42.2651
offset_bottom = 322.0
grow_horizontal = 0

[node name="time" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="time_label" type="Label" parent="VBoxContainer/time"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="VBoxContainer/time/time_label"]
autostart = true

[node name="sand_clock_icon" type="TextureRect" parent="VBoxContainer/time"]
layout_mode = 2
texture = ExtResource("6_qy2rg")
expand_mode = 2

[node name="score" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="score_label" type="Label" parent="VBoxContainer/score"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="skull_icon" type="TextureRect" parent="VBoxContainer/score"]
layout_mode = 2
texture = ExtResource("7_d15qb")
expand_mode = 2

[node name="ammo" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ammo_label" type="Label" parent="VBoxContainer/ammo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ammo_icon" type="TextureRect" parent="VBoxContainer/ammo"]
layout_mode = 2
texture = ExtResource("8_mm2in")
expand_mode = 2

[connection signal="timeout" from="VBoxContainer/time/time_label/Timer" to="." method="_on_timer_timeout"]
